# python-packaging-example-simple

./: .gitignore  Readme.md  makefile.py  pyproject.toml
src/packaging_example/: my_module.py
src/packaging_example/data/: data_additional.csv
test/: cvs_import_read_test.py  fib_test.py
utils/: makefileutils.py
